--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
   },
   "homepage": "https://github.com/joaopaulozz14/pokedex#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.1"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   }
 }
